# telco-churn-mlops

./: .dockerignore  .env.example  .gitignore  README.md  artifacts.dvc  docker-compose.yml  models.dvc  pyproject.toml  results.dvc
.dvc/: config
.github/workflows/: ruff.yml
docs/: manual_workflow.md
scripts/: export_mlflow_env_dagshub.sh  export_mlflow_env_local.sh  run_mlflow_local.sh  run_predict_smoke.sh
src/data/services/data_import/: download_data.py  load_data.py
src/data/services/preprocess/: preprocess.py
src/evaluate_model/services/: compare_models.py  evaluate.py  register_candidate_model.py  tag_candidate_run.py
src/predict/: Dockerfile
src/predict/core/: load_model.py  schemas.py
src/predict/services/: predict_api.py
src/train_model/core/: artifact_utils.py  mlflow_utils.py
src/train_model/services/: train_baseline.py  train_engineered.py  train_random_forest.py
tests/: test_predict_api.py
tests/smoke/: test_predict_api_smoke.py
